unpackaged/objects/redwing__Training_Plan_Section_Item__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Duration__c</fullName>
        <formula>redwing__Learning__r.redwing__Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Duration_hours__c</fullName>
        <formula>redwing__Learning__r.redwing__Duration_hours__c</formula>
        <label>Duration (hours)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only published learning objects can be added to a Learning Plan</errorMessage>
            <filterItems>
                <field>redwing__Learning__c.redwing__Is_Published_Formula__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>NOTE: Only published learning objects can be associated to a Learning Plan</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Learning Plan Section Items</relationshipLabel>
        <relationshipName>Training_Plan_Section_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Training_Plan_Section__c</fullName>
        <label>Learning Plan Section</label>
        <referenceTo>redwing__Training_Plan_Section__c</referenceTo>
        <relationshipLabel>Learning Plan Section Items</relationshipLabel>
        <relationshipName>Training_Plan_Section_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Learning Plan Section Item</label>
    <nameField>
        <displayFormat>LPSI-{0000000}</displayFormat>
        <label>Learning Plan Section Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Section Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>redwing__Learning_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(redwing__Learning__c)</errorConditionFormula>
        <errorMessage>Please select a Learning Object</errorMessage>
    </validationRules>
</CustomObject>